[project]
name = "python-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "dataclass-wizard>=0.35.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.3",
    "pandas[parquet]>=2.0.0",
    "pillow>=11.1.0",
    "plyfile>=1.1",
    "pytorch-msssim>=1.0.0",
    "pyyaml>=6.0.2",
    "scipy>=1.15.2",
    "taichi>=1.6.0",
    "tensorboard>=2.19.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
